# barffine

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Kraftfile  README.md  bench-runner.toml  docker-compose.ghcr.yml  docker-compose.yml
.github/workflows/: publish-unikraft.yml  publish.yml
benches/bench-runner/: Cargo.toml
benches/bench-runner/src/: client.rs  config.rs  dataset.rs  main.rs  operations.rs  output.rs  runner.rs  sampler.rs
core/: Cargo.toml
core/benches/: doc_engine.rs
core/src/: access_token.rs  blob.rs  comment_attachment.rs  comment_store.rs  config.rs  db.rs  doc.rs  doc_data.rs  doc_roles.rs  doc_snapshot_store.rs  doc_store.rs  doc_update_log.rs  feature.rs  ids.rs  lib.rs  membership.rs  notification.rs  notification_store.rs  search.rs  user.rs  user_doc_store.rs  user_settings.rs  workspace.rs  workspace_feature_store.rs  workspace_member.rs
core/src/db/: access_token_repo.rs  blob_repo.rs  comment_attachment_repo.rs  comment_repo.rs  doc_public_link_store.rs  doc_repo.rs  doc_role_repo.rs  errors.rs  mod.rs  user_doc_repo.rs  user_repo.rs  user_settings_repo.rs  workspace_feature_repo.rs  workspace_repo.rs
core/src/db/libsql/: access_token_repo.rs  blob_repo.rs  comment_attachment_repo.rs  comment_repo.rs  doc_public_link_store.rs  doc_repo.rs  doc_role_repo.rs  doc_update_log_store.rs  error.rs  migrations.rs  mod.rs  notification_center.rs  pool.rs  row_ext.rs  transaction.rs  user_doc_repo.rs  user_repo.rs  user_settings_repo.rs  workspace_feature_repo.rs  workspace_repo.rs
core/src/db/postgres/: access_token_repo.rs  blob_repo.rs  comment_attachment_repo.rs  comment_repo.rs  connection.rs  doc_public_link_store.rs  doc_repo.rs  doc_role_repo.rs  doc_update_log_store.rs  macros.rs  mod.rs  notification_center.rs  placeholders.rs  user_doc_repo.rs  user_repo.rs  user_settings_repo.rs  util.rs  workspace_feature_repo.rs  workspace_repo.rs
core/src/db/rocks/: blob_store.rs  doc_data.rs  doc_public_link_store.rs  doc_repo.rs  doc_role_backend.rs  doc_update_log_store.rs  mod.rs  notification_center.rs  user_doc_repo.rs
core/src/db/sql/: blob_store.rs  mod.rs
core/src/db/sqlite/: access_token_repo.rs  blob_repo.rs  comment_attachment_repo.rs  comment_repo.rs  connection.rs  doc_data.rs  doc_public_link_store.rs  doc_repo.rs  doc_role_repo.rs  doc_update_log_store.rs  mod.rs  notification_center.rs  user_doc_repo.rs  user_repo.rs  user_settings_repo.rs  workspace_feature_repo.rs  workspace_repo.rs
core/src/doc_roles/: backend.rs
graphql/operations/: create_session.graphql  create_workspace.graphql  duplicate_doc.graphql  list_comments.graphql  workspace_docs.graphql  workspace_meta.graphql  workspaces.graphql
scripts/: run-bench.sh
server/: Cargo.toml
server/migrations/: 0001_init.sql  0002_workspace_blobs.sql
server/migrations/postgres/: 0001_init.sql  0002_workspace_blobs.sql  0003_oauth_accounts.sql  0004_namespace_blobs.sql  0005_doc_updates_kv.sql  0007_userspace_snapshots_kv.sql  0008_doc_time_indexes.sql
server/migrations/sqlite/: 0003_oauth_accounts.sql  0004_namespace_blobs.sql  0006_doc_snapshots_kv.sql  0007_userspace_snapshots_kv.sql
server/src/: auth.rs  blob_store.rs  cookies.rs  crypto.rs  error.rs  feature_service.rs  http.rs  lib.rs  main.rs  observability.rs  request_cache.rs  router.rs  state.rs  test_support.rs  testing.rs  types.rs
server/src/cli/: mod.rs
server/src/comment/: fetch.rs  mod.rs  notifications.rs
server/src/doc/: access.rs  cache.rs  content.rs  context.rs  history.rs  metadata.rs  mod.rs  mode.rs  paths.rs  roles.rs  service.rs  sync.rs
server/src/graphql/: constants.rs  context.rs  copilot.rs  cursors.rs  doc.rs  handlers.rs  helpers.rs  metrics.rs  mod.rs  mutation.rs  query.rs  schema.rs  user.rs  workspace.rs
server/src/graphql/types/: access_token.rs  blob.rs  comment.rs  common.rs  config.rs  doc.rs  error.rs  feature.rs  mod.rs  rpc_access_token.rs  subscription.rs  user.rs  workspace.rs
server/src/handlers/: auth_handlers.rs  blob_handlers.rs  doc_handlers.rs  headers.rs  health_handlers.rs  mod.rs  session_cookies.rs  user_handlers.rs  workspace_handlers.rs
server/src/oauth/: config.rs  mod.rs  provider.rs  router.rs  state_store.rs
server/src/oauth/providers/: apple.rs  github.rs  google.rs  mod.rs  oidc.rs
server/src/socket/: ack.rs  auth.rs  events.rs  mod.rs  rooms.rs  types.rs
server/src/user/: avatar.rs  helpers.rs  mod.rs  service.rs
server/src/utils/: attachments.rs  blob_download.rs  channels.rs  crdt.rs  db.rs  mod.rs
server/src/workspace/: invites.rs  members.rs  mod.rs  service.rs
