[package]
name = "barffine-core"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
y-octo = { git = "https://github.com/toeverything/AFFiNE.git", package = "y-octo" }
yrs.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
rocksdb.workspace = true
libsql.workspace = true
deadpool-libsql.workspace = true
futures-util.workspace = true
once_cell.workspace = true
tracing.workspace = true
tokio.workspace = true
futures.workspace = true
bincode.workspace = true

[dev-dependencies]
tokio.workspace = true
tempfile = "3"
