[package]
name = "barffine-core"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
yrs.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
rocksdb.workspace = true
futures-util.workspace = true
once_cell.workspace = true
tracing.workspace = true
tokio.workspace = true
futures.workspace = true
bincode.workspace = true
parking_lot.workspace = true

[dev-dependencies]
tokio.workspace = true
tempfile = "3"
criterion = "0.7"

[[bench]]
name = "doc_engine"
harness = false
