[package]
name = "barffine-server"
version = "0.1.0"
edition.workspace = true

[features]
default = []
barffine_extra = []

[dependencies]
anyhow.workspace = true
axum.workspace = true
cookie.workspace = true
headers.workspace = true
time.workspace = true
tower.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
barffine-core = { path = "../core" }
base64.workspace = true
infer = "0.19.0"
argon2.workspace = true
rand.workspace = true
rand_core.workspace = true
uuid.workspace = true
chrono.workspace = true
clap.workspace = true
async-graphql.workspace = true
async-graphql-axum.workspace = true
dashmap.workspace = true
futures-util.workspace = true
async-trait.workspace = true
httpdate.workspace = true
tower-http.workspace = true
p256.workspace = true
pkcs8.workspace = true
once_cell.workspace = true
dotenvy.workspace = true
socketioxide.workspace = true
socketioxide-core.workspace = true
logfire.workspace = true
axum-tracing-opentelemetry.workspace = true
axum-otel-metrics.workspace = true
fastrand.workspace = true
moka.workspace = true
pprof = { version = "0.15", features = ["flamegraph", "protobuf-codec"] }
snap = "1.1"
tempfile = "3"
reqwest.workspace = true
serde_urlencoded.workspace = true
url.workspace = true
semver.workspace = true
jsonwebtoken.workspace = true
opentelemetry.workspace = true
rocksdb.workspace = true
bincode.workspace = true
yrs.workspace = true
parking_lot.workspace = true
console-subscriber = "0.5.0"
mimalloc.workspace = true
